--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./styles/images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./styles/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./styles/images/favicon-16x16.png">
+<link rel="manifest" href="./styles/images/site.webmanifest">
+<link rel="mask-icon" href="./styles/images/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
     <title>Traway.live</title>
     <link rel="stylesheet" href="/styles/normalize.css" />
     <link rel="stylesheet" href="/styles/traway.css" />
@@ -12,18 +19,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&family=Inter:wght@700;800&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="https://kit.fontawesome.com/98a674e080.css" crossorigin="anonymous" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script defer src="app.js"></script>
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <!-- font for traway -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 
 </head>
 
@@ -387,7 +387,7 @@
             <div class="master-footer">
                 <div class="companyName">
                     <p class="companyName--backed">BACKED BY IIEDC</p>
-                    <h1 id="companyName--traway"> Traway</h1>
+                    <img id="companyName--traway" src="./styles/images/traway.svg" alt="traway">
                 </div>
           
                 <!-- Trying svg animations  -->
