--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </ul>
                 </nav>
 
-                <a href="https://dashboard.traway.live/" class="CTA-nav" id="login-button">Login</a>
+                <a href="https://dashboard.traway.live/login" class="CTA-nav" id="login-button">Login</a>
             </header>
         </div>
         <div class="CTA" id="home">
@@ -58,8 +58,8 @@
                 </p>
             </div>
             <div class="hero-CTA-buttons" data-aos="fade-in">
-                <a href="https://dashboard.traway.live/" id="hero-signup-button">Sign Up</a>
-                <a href="https://dashboard.traway.live/" id="hero-login-button">Login</a>
+                <a href="https://dashboard.traway.live/signup" id="hero-signup-button">Sign Up</a>
+                <a href="https://dashboard.traway.live/login" id="hero-login-button">Login</a>
             </div>
         </div>
     </div>
