removed slideup and center aligned support and product class

--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
                         </p>
                     </dziv>
                 </div>
-                <div class="img" data-aos="fade-left"><img src="/styles/images/map.png" alt="" id="map-img"
-                        data-aos="slide-up"></div>
+                <div class="img" data-aos="fade-left"><img src="/styles/images/map.png" alt="" id="map-img"></div>
                 <div class="img-1080 "><img src="/styles/images/map.png" alt="" id="map-img-1080" data-aos="slide-left">
                 </div>
             </div>
