solved overflow and footer center align problem

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    <main>
+    <main style="overflow-x: hidden;">
         <section class="floatingdiv" data-aos="slide-up">
             <div class="distance-travelled">
                 <img src="/styles/images/distance-travelled-svg.svg" alt="" id="distance-travelled-svg">
