--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <div class="noor-sir" data-aos="fade-up">
                         <img src="/styles/images/noorsir.png" alt="" id="noor-sir">
                         <span class="name-position-description">
-                            <h3 class="Name">Dr. Noor Zaman</h3>
+                            <h3 class="Name">Dr. Noor Zaman Khan</h3>
                             <h4 class="position">ADVISORY BOARD</h4>
                             <p class="description">We owe tremendous gratitude to Prof. Noor zaman khan. He gave us
                                 invaluable advice all throughout the way and believed in us</p>
