added contact route with contact id

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="profiles-descriptions">
+                <div class="profiles-descriptions" id="contact">
                     <div class="noor-sir" data-aos="fade-up">
                         <img src="/styles/images/noorsir.png" alt="" id="noor-sir">
                         <span class="name-position-description">
