added meta tag for description of the webstite

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <link rel="manifest" href="./styles/images/site.webmanifest">
 <link rel="mask-icon" href="./styles/images/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+<meta
+name="description"
+content="Traway provide bus serves for Nit sringar students."
+/>
+<meta name="theme-color" content="#ffffff"/>
     <title>Traway.live</title>
     <link rel="stylesheet" href="/styles/normalize.css" />
     <link rel="stylesheet" href="/styles/traway.css" />
