added signup login route link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ content="Traway provide bus serves for Nit sringar students."
                     </ul>
                 </nav>
 
-                <a href="https://dashboard.traway.live/" class="CTA-nav" id="login-button">Login</a>
+                <a href="https://dashboard.traway.live/login" class="CTA-nav" id="login-button">Login</a>
             </header>
         </div>
         <div class="CTA" id="home">
@@ -62,8 +62,8 @@ content="Traway provide bus serves for Nit sringar students."
                 </p>
             </div>
             <div class="hero-CTA-buttons" data-aos="fade-in">
-                <a href="https://dashboard.traway.live/" id="hero-signup-button">Sign Up</a>
-                <a href="https://dashboard.traway.live/" id="hero-login-button">Login</a>
+                <a href="https://dashboard.traway.live/signup" id="hero-signup-button">Sign Up</a>
+                <a href="https://dashboard.traway.live/login" id="hero-login-button">Login</a>
             </div>
         </div>
     </div>
