added shital photo

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                             </span>
                         </div>
                         <div class="rohit-gupta" data-aos="fade-left">
-                            <img src="https://i.ibb.co/Zz5h4P6/IMG-20230308-222928.jpg" style="width: fit-content;" alt="" id="yash-tiwari-img">
+                            <img src="https://i.ibb.co/6RwyWB8/IMG-20230308-222928-1.jpg"  alt="" id="yash-tiwari-img">
                             <span class="name-position-description">
                                 <h3 class="students-name">Shital Choudhary</h3>
                                 <h4 class="students-position">Managing director, founding engineer</h4>
