changed my text

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         <span class="name-position-description">
                             <h3 class="Name">Dr. Noor Zaman Khan</h3>
                             <h4 class="position">ADVISORY BOARD</h4>
-                            <p class="description">We owe tremendous gratitude to Prof. Noor zaman khan. He gave us
+                            <p class="description">We owe tremendous gratitude to Prof. Noor Zaman Khan. He gave us
                                 invaluable advice all throughout the way and believed in us</p>
                         </span>
                     </div>
@@ -343,11 +343,7 @@
                             <span class="name-position-description">
                                 <h3 class="students-name">Rohit Gupta</h3>
                                 <h4 class="students-position">COO, CTO, CO-FOUNDER & FULL-STACK DEV</h4>
-                                <p class="students-description">Rohit is a skilled full-stack developer with over three
-                                    years of experience in web development. He has served as a technical lead on
-                                    multiple projects, demonstrating expertise in a wide range of technologies. He is
-                                    passionate about innovation and enjoys working on cutting-edge projects that
-                                    challenge him to learn and grow.</p>
+                                <p class="students-description">Rohit is an experienced full-stack developer who has led multiple technical projects. He thrives on innovation and is passionate about challenging himself with cutting-edge projects to continue growing.</p>
                             </span>
                         </div>
 
