added address and terms

--- a/index.html
+++ b/index.html
@@ -503,6 +503,7 @@
                             </clipPath>
                         </defs>
                     </svg>
+          
 
                 </div>
 
@@ -514,9 +515,10 @@
                         Support
                     </p>
                     <ul class="footer--nav--links">
+                        <li class="footer--links"><a href="#" class="footer--links">Terms</a></li>
                         <li class="footer--links"><a href="#" class="footer--links">Contact Us</a></li>
                         <li class="footer--links"><a href="#about-us" class="footer--links">About Us</a></li>
-
+                        <li class="footer--links"><a href="#" class="footer--links">Refund Policy</a></li>
                     </ul>
                 </div>
                 <div class="product">
@@ -525,6 +527,16 @@
                     </p>
                     <ul class="footer--nav--links">
                         <li class="footer--links"><a href="#" class="footer--links">The Dark horses community</a></li>
+                    </ul>
+                </div>
+                <div class="findus">
+                    <p class="support--support">
+                        Find us Here
+                    </p>
+                    <ul class="footer--nav--links">
+                   <li>B3A/260, Janakpuri, New Delhi- 110058</li>
+                   <li>Delhi, India</li>
+                    <li>+91 8307223253 </li>
                     </ul>
                 </div>
             </div>
