--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                     </p>
                     <ul class="footer--nav--links">
                         <li class="footer--links"><a href="#" class="footer--links">Terms</a></li>
-                        <li class="footer--links"><a href="#" class="footer--links">Contact Us</a></li>
+                        <li class="footer--links"><a href="mailto:community@traway.live" class="footer--links">Contact Us</a></li>
                         <li class="footer--links"><a href="#about-us" class="footer--links">About Us</a></li>
                         <li class="footer--links"><a href="#" class="footer--links">Refund Policy</a></li>
                     </ul>
