added terms link

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                         Support
                     </p>
                     <ul class="footer--nav--links">
-                        <li class="footer--links"><a href="#" class="footer--links">Terms</a></li>
+                        <li class="footer--links"><a href="./terms.html" class="footer--links">Terms</a></li>
                         <li class="footer--links"><a href="mailto:community@traway.live" class="footer--links">Contact Us</a></li>
                         <li class="footer--links"><a href="#about-us" class="footer--links">About Us</a></li>
                         <li class="footer--links"><a href="./refund.html" class="footer--links">Refund Policy</a></li>
