refund , privacy page added

--- a/refund.html
+++ b/refund.html
@@ -9,9 +9,10 @@
     </title>
     <style>
       img {
-        margin: 0 43%;
+        margin:auto;
+        display: block;
       }
-      h1 {
+      h1,h5 {
         text-align: center;
       }
 
@@ -24,8 +25,11 @@
     <link rel="stylesheet" href="./styles/traway.css" />
   </head>
   <body>
-    <img src="./Traway.svg" alt="traway's logo" />
+    <a href="https://traway.live/">
+    <img src="./assets/Traway.svg" alt="traway's logo" />
+    </a>
     <h1>Refund Policy</h1>
+    <h5>Effective Date: 1st April, 2023</h5>
     <p>
       Traway's refund policy is designed to be fair to both our customers and
       our business. We understand that travel plans can change, and we will do
