--- a/terms.html
+++ b/terms.html
@@ -9,9 +9,10 @@
     </title>
     <style>
       img {
-        margin: 0 43%;
+        margin:auto;
+        display: block;
       }
-      h1 {
+      h1,h5 {
         text-align: center;
       }
       h2 {
@@ -26,8 +27,12 @@
     <link rel="stylesheet" href="./styles/traway.css" />
   </head>
   <body>
-    <img src="./Traway.svg" alt="traway's logo" />
+    <a href="https://traway.live/">
+      <img src="./assets/Traway.svg" alt="traway's logo" />
+      </a>
     <h1>Terms and Conditions</h1>
+    <h5>Effective Date: 1st April, 2023</h5>
+
     <p>
       These Terms and Conditions ("Agreement") govern your use of the travel
       services provided by Traway ("Traway," "we," or "us"). By using our
@@ -110,13 +115,6 @@
       images, and software, is the property of Traway and is protected by
       copyright laws. You may not reproduce, modify, or distribute any content
       without our prior written consent.
-    </p>
-
-    <h2>Privacy Policy</h2>
-    <p>
-      Traway is committed to protecting your privacy. We collect and use your
-      personal information in accordance with our Privacy Policy, which is
-      available on our website.
     </p>
 
     <h2>Force Majeure</h2>
