--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                     </p>
                     <ul class="footer--nav--links">
                         <li class="footer--links"><a href="./terms.html" class="footer--links">Terms</a></li>
-                        <li class="footer--links"><a href="mailto:community@traway.live" class="footer--links">Contact Us</a></li>
+                        <li class="footer--links"><a href="./contactus.html" class="footer--links">Contact Us</a></li>
                         <li class="footer--links"><a href="#about-us" class="footer--links">About Us</a></li>
                         <li class="footer--links"><a href="./refund.html" class="footer--links">Refund Policy</a></li>
                         <li class="footer--links"><a href="./privacy.html" class="footer--links">Privacy Policy</a></li>
