added youtube logo and link.

--- a/index.html
+++ b/index.html
@@ -377,7 +377,9 @@
                 <div class="companyName">
                     <div class="socials ">
                         <a href="https://www.instagram.com/traway.community/"><img class="sociallinks" src="./styles/images/instagram.svg" alt=""></a>
-                        <a href="https://www.linkedin.com/company/traway/about/"><img class="sociallinks" src="./styles/images/linkedin.svg" alt=""></a>    
+                        <a href="https://www.linkedin.com/company/traway/about/"><img class="sociallinks" src="./styles/images/linkedin.svg" alt=""></a>  
+                        <a href="https://www.youtube.com/watch?v=sfvkMHVJ3oY"><img class="sociallinks youtubelogo" src="./assets/youtube.svg" alt=""></a>    
+
                     </div>
                     
                     <img id="companyName--traway" src="./styles/images/traway.svg" alt="traway.live">
